--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Portfolio of Poorna Chandra Rao" />
   <!-- Make sure the filename matches your actual CSS file -->
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="style.css" />
   <title>Poorna Chandra Rao | Portfolio</title>
 </head>
 <body>
